Updated travis file to deploy on diffenrent branches, corrected css on mobile

--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -66,6 +66,12 @@ html {
         white-space: nowrap;
       }
 
+      .padding-responsive {
+        @media screen and (max-width: $screen-size) {
+          padding-left: 10px;
+        }
+      }
+
       p,
       li {
         text-align: justify;
